--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -28,3 +28,17 @@ body{ background:url(../img/bg0.png) no-repeat; background-position:top center; 
 	background-repeat: no-repeat;
 	background-color: transparent;
 }
+/*프로필이미지 둥글게*/
+.photo1 {
+    width: 100px; height: 100px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 50%;
+}
+
+.photo2 {
+    width: 50px; height: 50px;
+    object-fit: cover;
+    object-position: top;
+    border-radius: 50%;
+}
