--- a/src/main/webapp/css/common.css
+++ b/src/main/webapp/css/common.css
@@ -66,9 +66,12 @@ input[type="password"]{height:27px;padding:0 14px;border:1px solid #dbdbdb;line-
 .agR{text-align:right}
 .full{width:100%}
 .btn-more{display:inline-block;width:36px;height:36px;background:#fff url(../images/ico_plus.png) no-repeat 50% 50%;border-radius:100%;font-size:0;vertical-align:middle}
-.btn{display:inline-block;box-sizing:border-box;background:#555;color:#fff;text-align:center}
+.btn{display:inline-block;box-sizing:border-box;background:#555;color:#fff;text-align:center;vertical-align:middle}
 .large{min-width:120px;height:40px;font-size:15px;padding:10px;line-height:20px}
+.medium{min-width:90px;height:30px;font-size:15px;padding:5px;line-height:20px}
 .blue{background:#367eeb;color:#fff}
+.btn-bor{display:inline-block;color:#4a4a4a;padding:8px 12px;background:#fafafa;border:1px solid #ddd}
+.btn-del{display:inline-block;color:#fff;padding:6px 10px;background:#555;font-size:14px}
 .ico-file{display:inline-block;width:15px;height:19px;background:url(../images/ico_file.png) no-repeat 50% 50%;font-size:0;vertical-align:middle}
 .ico-file-link{display:inline-block;padding-left:25px;background:url(../images/ico_file.png) no-repeat 0 0;line-height:1.4;margin-right:20px}
 .fileBox .fileName{display:inline-block;width:220px;height:27px;padding-left:10px;margin-right:5px;line-height:25px;border:1px solid #dbdbdb;background-color:#fff;vertical-align:middle}
