--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -25,15 +25,16 @@ html, body, #wrap{height:100%}
 .header-gnb .gnb>li>ul>li>a{display:block;margin:10px 0;font-size:16px;padding:5px 0;font-family:'NanumBarunGothic',sans-serif;color:#000}
 .header-gnb .gnb>li>ul>li>a.active,
 .header-gnb .gnb>li>ul>li>a:hover{color:#367eeb}
-.header-gnb .search-form{float:right;width:238px;height:30px;margin-top:20px;border:1px solid #367eeb}
-.header-gnb .search-form input{float:left;width:205px;height:30px;border:0}
-.header-gnb .search-form .btn-search{float:right;width:32px;height:30px;background:url(../images/ico_sh.png) no-repeat 50% 50%;font-size:0}
+.header-gnb .search-form{float:right;width:232px;height:34px;margin-top:16px;border:3px solid #367eeb}
+.header-gnb .search-form input{float:left;width:194px;height:34px;border:0}
+.header-gnb .search-form .btn-search{float:right;width:38px;height:34px;background:url(../images/ico_sh.png) no-repeat 50% 50%;font-size:0}
 .header-sub{display:none;position:absolute;top:109px;left:0;width:100%;height:146px;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;background:#f2f2f3}
 .main-visual{height:616px;background:url(../images/main_visual.jpg) no-repeat 50% 0}
-.main-visual-txt{padding-top:220px}
-.main-visual-txt .tx1, .main-visual-txt .tx2{color:#000;letter-spacing:-2px}
-.main-visual-txt .tx1{font-size:25px}
-.main-visual-txt .tx2{margin-top:15px;font-size:44px;font-family:'NanumSquareB',sans-serif;letter-spacing:-3px}
+.main-visual-txt{padding-top:200px}
+.main-visual-txt .tx1, .main-visual-txt .tx3{color:#fff;letter-spacing:-2px;line-height:1.1}
+.main-visual-txt .tx1{font-size:24px}
+.main-visual-txt .tx2{margin-top:10px;font-size:60px;font-family:'NanumSquareB',sans-serif;color:#97f9ff;letter-spacing:-3px;line-height:1.1}
+.main-visual-txt .tx3{margin-top:15px;font-size:20px}
 .search-total-form{position:relative;margin-top:30px;width:627px;height:55px;border:1px solid #367eeb;background:#fff}
 .search-total-form input{width:486px;height:55px;border:0;font-size:17px;}
 .search-total-form .btn-total-search{display:inline-block;position:absolute;top:0;right:0;width:142px;height:55px;padding-left:55px;background:#367eeb url(../images/ico_shw.png) no-repeat 21px 50%;color:#fff;font-size:18px;text-align:left;letter-spacing:-1px}
